new file-structure

--- a/.github/workflows/docker-image-latest.yml
+++ b/.github/workflows/docker-image-latest.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v4
       with:
-        file: Dockerfile
+        file: backend/Dockerfile
         push: true
         tags: ghcr.io/larsti/ovpn_webapi:latest
         github_token: ${{ secrets.GITHUB_TOKEN }}
