--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3'
 services:
         ovpn_webapi:
                 #restart: unless-stopped
-                build: .
+                build: ./backend
                 environment:
                         - "CN_SUFFIX=vpn"
                 volumes:
@@ -12,11 +12,6 @@ services:
                         - "../data:/docker/data"
                 ports:
                         - "9596:8080"
-#        ovpn_server:
-#                image: jlti/ovpn_server:latest
-#                volumes:
-#                        - "server:/docker/server:ro"
-#                        - "ccd:/docker/ccd:ro"
 volumes:
         server:
         ccd:
