--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.1.0",
     "file-saver": "^2.0.5",
     "primeng": "^17.3.3",
+    "keycloak-angular": "15.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
